--- a/setup-ocp-vsphere.yml
+++ b/setup-ocp-vsphere.yml
@@ -1,85 +1,120 @@
 - hosts: localhost
+
   vars:
     masterContent: "{{ lookup('file', '{{ playbook_dir }}/install-dir/master.64' )}}"
     workerContent: "{{ lookup('file', '{{ playbook_dir }}/install-dir/worker.64' )}}"
     appendBootstrapContent: "{{ lookup('file', '{{ playbook_dir }}/install-dir/append-bootstrap.64' )}}"
-  tasks:
 
-  - name: Create bin, install-dir and downloads folders
+  tasks:
+  - name: SETUP 1.0 | Create bin, install-dir and downloads folders
     file:
       path: "{{ playbook_dir }}/{{ item }}"
       state: directory
       mode: '0755'
     with_items: ["bin", "downloads", "install-dir"]
+    tags:
+      - ""
 
-  - name: Download the oc client
+  - name: SETUP 1.0 | Download the oc client
     get_url:
       url: "{{ download.oc_client }}"
       dest: "{{ playbook_dir }}/downloads/oc_client.tar.gz"
+    tags:
+      - ""
 
-  - name: Download the openshift-install CLI tool
+  - name: SETUP 1.0 | Download the openshift-install CLI tool
     get_url:
       url: "{{ download.openshift_install }}"
       dest: "{{ playbook_dir }}/downloads/openshift_install.tar.gz"
+    tags:
+      - ""
 
-  - name: Unarchive oc client
+  - name: SETUP 1.0 | Unarchive oc client
     unarchive:
       src: "{{ playbook_dir }}/downloads/oc_client.tar.gz"
       dest: "{{ playbook_dir }}/bin"
       remote_src: yes
+    tags:
+      - ""
 
-  - name: Unarchive openshift-install
+  - name: SETUP 1.0 | Unarchive openshift-install
     unarchive:
       src: "{{ playbook_dir }}/downloads/openshift_install.tar.gz"
       dest: "{{ playbook_dir }}/bin"
       remote_src: yes
+    tags:
+      - ""
 
-  - name: Copy install-config.yaml file into install-dir
+  - name: SETUP 1.0 | Copy install-config.yaml file into install-dir
     template:
       src: "{{ playbook_dir }}/templates/install-config.yaml.j2"
       dest: "{{ playbook_dir }}/install-dir/install-config.yaml"
+    tags:
+      - ""
 
-  - name: Backup the install-config.yaml file
+  - name: SETUP 1.0 | Backup the install-config.yaml file
     copy:
       src: "{{ playbook_dir }}/install-dir/install-config.yaml"
       dest: "{{ playbook_dir }}/install-dir/install-config.yaml.orig"
+    tags:
+      - ""
 
-  - name: Generate the ignition manifests
+  - name: SETUP 1.0 | Generate the ignition manifests
     command: "{{ playbook_dir }}/bin/openshift-install create manifests --dir={{ playbook_dir }}/install-dir"
+    tags:
+      - ""
 
-  - name: Apply the patch to set mastersSchedulable to false
+  - name: SETUP 1.0 | Apply the patch to set mastersSchedulable to false
     patch:
       src: "{{ playbook_dir }}/patches/cluster-scheduler-02-config.yml.patch"
       dest: "{{ playbook_dir }}/install-dir/manifests/cluster-scheduler-02-config.yml"
+    tags:
+      - ""
 
-  - name: Generate the ignition configs
+  - name: SETUP 1.0 | Generate the ignition configs
     command: "{{ playbook_dir }}/bin/openshift-install create ignition-configs --dir={{ playbook_dir }}/install-dir"
+    tags:
+      - ""
 
-  - name: Copy append-bootstrap.ign file into install-dir
+  - name: SETUP 1.0 | Copy append-bootstrap.ign file into install-dir
     template:
       src: "{{ playbook_dir }}/templates/append-bootstrap.ign.j2"
       dest: "{{ playbook_dir }}/install-dir/append-bootstrap.ign"
+    tags:
+      - ""
 
-  - name: Get base64 version of append-bootstrap.ign
+  - name: SETUP 1.0 | Get base64 version of append-bootstrap.ign
     shell: "base64 -w0 {{ playbook_dir }}/install-dir/append-bootstrap.ign > {{ playbook_dir }}/install-dir/append-bootstrap.64"
+    tags:
+      - ""
 
-  - name: Get base64 version of master.ign
+  - name: SETUP 1.0 | Get base64 version of master.ign
     shell: "base64 -w0 {{ playbook_dir }}/install-dir/master.ign > {{ playbook_dir }}/install-dir/master.64"
+    tags:
+      - ""
 
-  - name: Get base64 version of worker.ign
+  - name: SETUP 1.0 | Get base64 version of worker.ign
     shell: "base64 -w0 {{ playbook_dir }}/install-dir/worker.ign > {{ playbook_dir }}/install-dir/worker.64"
+    tags:
+      - ""
 
-  - name:
+  - name: SETUP 1.0 |
     template:
       src: "{{ playbook_dir }}/templates/master-vm-param.j2"
       dest: "{{ playbook_dir }}/install-dir/master-vm-param.txt"
+    tags:
+      - ""
 
-  - name:
+  - name: SETUP 1.0 |
     template:
       src: "{{ playbook_dir }}/templates/worker-vm-param.j2"
       dest: "{{ playbook_dir }}/install-dir/worker-vm-param.txt"
+    tags:
+      - ""
 
-  - name:
+  - name: SETUP 1.0 |
     template:
       src: "{{ playbook_dir }}/templates/append-bootstrap-vm-param.j2"
       dest: "{{ playbook_dir }}/install-dir/append-bootstrap-vm-param.txt"
+    tags:
+      - ""
