--- a/setup-ocp-vsphere.yml
+++ b/setup-ocp-vsphere.yml
@@ -3,14 +3,35 @@
     masterContent: "{{ lookup('file', '{{ playbook_dir }}/install-dir/master.64' )}}"
     workerContent: "{{ lookup('file', '{{ playbook_dir }}/install-dir/worker.64' )}}"
     appendBootstrapContent: "{{ lookup('file', '{{ playbook_dir }}/install-dir/append-bootstrap.64' )}}"
+    govc_file: "/usr/local/bin/govc"
   tasks:
-  
-  - name: Create bin, install-dir and downloads folders
+ 
+
+  - name: VMWAREPREP 1.0 |Create bin, install-dir and downloads folders
     file:
       path: "{{ playbook_dir }}/{{ item }}"
       state: directory
       mode: '0755'
     with_items: ["bin", "downloads", "install-dir"]  
+
+  - name: VMWAREPREP 1.1 | Download the latest RHCOS OVA file
+    get_url:
+      url: "{{ download.ova_image }}"
+      dest: "{{ playbook_dir }}/downloads/{{ templateName }}.ova"  
+    
+  - name: VMWAREPREP 1.2 | Upload the latest RHCOS OVA file to VMWare
+    command: "{{ govc_file }} import.ova -name={{ templateName }} {{ playbook_dir }}/downloads/{{ templateName }}.ova "
+    environment:
+      GOVC_HOST: "{{ vcenter.ip }}"
+      GOVC_URL: "https://{{ vcenter.ip }}/sdk"
+      GOVC_USERNAME: "{{ vcenter.username }}"
+      GOVC_PASSWORD: "{{ vcenter.password }}"
+      GOVC_INSECURE: 1
+      GOVC_DATASTORE: "{{ vcenter.datastore }}"
+      GOVC_DATACENTER: "{{ vcenter.datacenter }}"
+      GOVC_CLUSTER: "{{ vcenter.cluster }}"
+      GOVC_NETWORK: "{{ vcenter.vm_network_1 }}"
+    ignore_errors: yes      
   
   - name: Download the oc client
     get_url:
