--- a/setup-ocp-vsphere.yml
+++ b/setup-ocp-vsphere.yml
@@ -6,24 +6,22 @@
     govc_file: "/usr/local/bin/govc"
   tasks:
  
-
-  - name: VMWAREPREP 1.0 |Create bin, install-dir and downloads folders
+  - name: VMWARE_PREP 1.0 |Create bin, install-dir and downloads folders
     file:
       path: "{{ playbook_dir }}/{{ item }}"
       state: directory
       mode: '0755'
     with_items: ["bin", "downloads", "install-dir"]  
 
-  - name: VMWAREPREP 1.1 | Download the latest RHCOS OVA file
+  - name: VMWARE_PREP 1.1 | Download the latest RHCOS OVA file
     get_url:
       url: "{{ download.ova_image }}"
       dest: "{{ playbook_dir }}/downloads/{{ templateName }}.ova"  
     
-  - name: VMWAREPREP 1.2 | Upload the latest RHCOS OVA file to VMWare
+  - name: VMWARE_PREP 1.2 | Upload the latest RHCOS OVA file to VMWare
     command: "{{ govc_file }} import.ova -name={{ templateName }} {{ playbook_dir }}/downloads/{{ templateName }}.ova "
     environment:
-      GOVC_HOST: "{{ vcenter.ip }}"
-      GOVC_URL: "https://{{ vcenter.ip }}/sdk"
+      GOVC_URL: "{{ vcenter.ip }}"
       GOVC_USERNAME: "{{ vcenter.username }}"
       GOVC_PASSWORD: "{{ vcenter.password }}"
       GOVC_INSECURE: 1
