--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,5 @@
 
 - src: https://github.com/waynedovey/ocp4-upi-helpernode
   version: master
+- src: https://github.com/neoncyrex/389-ldap-server
+  version: master
