--- a/vars/vars.yml.template
+++ b/vars/vars.yml.template
@@ -2,14 +2,15 @@
 bootstrap:
   ignHttpLocation: http://192.168.0.x:8080/ignition/bootstrap.ign
 set_proxy: false
-disconnected: false
+disconnected: {{ disconnected_setting }}
 enable_multus:false
-container_registry: quay.ocp4.lab.gsslab.pek2.redhat.com:443
-ocp_release: ocp4.3.3-x86_64
+domain: lab.example.com
+container_registry: quay.ocp4.{{ domain }}:443
+ocp_release: ocp{{ ocp_version }}-x86_64
 templateName : rhcos-4.3.0-x86_64-vmware
-enable_ocs_storage: False
+enable_ocs_storage: false
 config:
-  baseDomain: ocp.example.com
+  baseDomain: "{{ domain }}"
   clusterName: ocp4
   bootstrapmac: 00:50:56:ab:b8:01
   master0mac: 00:50:56:ab:b8:02
@@ -50,19 +51,19 @@ config:
   UiZ28o5sJ4VRdJmFWsB6
   -----END CERTIFICATE-----"
 vcenter:
-  ip:
+  ip: vsphere.example.com
   datastore: datastore1
   defaultdatastore: datastore1
   username: administrator@vsphere.local
-  password:
+  password: SuperSecret
   datacenter: test
   cluster: vmware-testcluster
   vm_network_1: 'OpenShift'
   vm_network_2: 'Satotest'
   vm_network_3: 'VM Network'
 download:
-  oc_client: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/4.3.3/openshift-client-linux-4.3.3.tar.gz"
-  openshift_install: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/4.3.3/openshift-install-linux-4.3.3.tar.gz"
+  oc_client: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/{{ ocp_version }}/openshift-client-linux-{{ ocp_version }}.tar.gz"
+  openshift_install: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/{{ ocp_version }}/openshift-install-linux-{{ ocp_version }}.tar.gz"
   ova_image: "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/4.3/4.3.0/rhcos-4.3.0-x86_64-vmware.ova"
 
 # Post Deployment Vars
