--- a/scale-up-nodes-vsphere.yml
+++ b/scale-up-nodes-vsphere.yml
@@ -167,9 +167,26 @@
         - { name : "worker5" }
       tags:
         - "5"
+    - name: OCPNODES 6.2 | Approve Certs Bootstrap
+      shell: oc get csr | grep node-bootstrapper | grep  Pending | awk '{ print $1 }' | [[ $(wc -l) -eq 3 ]]
+      retries: 50
+      delay: 30
+      register: result
+      until: result.rc == 0
+      tags:
+        - "6"
 
-    - name: OCPNODES 6.0 | Approve Certs
-      shell: oc adm certificate approve $(oc get csr | grep node-bootstrapper | awk '{ print $1 }')
+    - name: OCPNODES 6.2 | Approve Certs Bootstrap
+      shell: oc adm certificate approve $(oc get csr | grep node-bootstrapper | grep  Pending | awk '{ print $1 }') 
+      retries: 50
+      delay: 30
+      register: result
+      until: result.rc == 0
+      tags:
+        - "6"
+
+    - name: OCPNODES 6.3 | Approve Certs Bootstrap
+      shell: oc adm certificate approve $(oc get csr | grep worker | grep Pending  | awk '{ print $1 }')
       retries: 50
       delay: 30
       register: result
