--- a/scale-up-nodes-vsphere.yml
+++ b/scale-up-nodes-vsphere.yml
@@ -167,7 +167,8 @@
         - { name : "worker5" }
       tags:
         - "5"
-    - name: OCPNODES 6.2 | Approve Certs Bootstrap
+
+    - name: OCPNODES 6.1 | Approve Certs Bootstrap Node Count
       shell: oc get csr | grep node-bootstrapper | grep  Pending | awk '{ print $1 }' | [[ $(wc -l) -eq 3 ]]
       retries: 50
       delay: 30
@@ -185,7 +186,7 @@
       tags:
         - "6"
 
-    - name: OCPNODES 6.3 | Approve Certs Bootstrap
+    - name: OCPNODES 6.3 | Approve Certs Worker
       shell: oc adm certificate approve $(oc get csr | grep worker | grep Pending  | awk '{ print $1 }')
       retries: 50
       delay: 30
