--- a/destroy-ocp-vsphere.yml
+++ b/destroy-ocp-vsphere.yml
@@ -32,7 +32,7 @@
           type: thin
           datastore: "{{ datastore }}"
       loop:
-        - { name : "boostrap0", template: "{{ templateName }}" }
+        - { name : "bootstrap", template: "{{ templateName }}" }
         - { name : "master0", template: "{{ templateName }}" }
         - { name : "master1", template: "{{ templateName }}" }
         - { name : "master2", template: "{{ templateName }}" }
@@ -66,7 +66,7 @@
           type: thin
           datastore: "{{ datastore }}"
       loop:
-        - { name : "boostrap0", template: "{{ templateName }}" }
+        - { name : "bootstrap", template: "{{ templateName }}" }
         - { name : "master0", template: "{{ templateName }}" }
         - { name : "master1", template: "{{ templateName }}" }
         - { name : "master2", template: "{{ templateName }}" }
